OPENJPA-1868: Miscellaneous FindBugs suggested performance improvements for lib, persistence, and persistence-jdbc.
git-svn-id: https://svn.apache.org/repos/asf/openjpa/trunk@1030172 13f79535-47bb-0310-9956-ffa450edef68